uuapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uuapp-deployment
  labels:
    app: uuapp
  namespace: uuapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: uuapp
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: uuapp
    spec:
      containers:
      - image: docker.io/bpeakcpeak/uuapp
        imagePullPolicy: Always
        name: uuapp
        ports:
        - containerPort: 80
          protocol: TCP
