uuapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uuapp-service
  namespace: uuapp
spec:
  selector:
    app: uuapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
